<resources>
    <string name="app_name">TurMurom</string>
    <string name="mapMenuItem">Карта</string>
    <string name="catalogMenuItem">Достопримечательности</string>
    <string name="catalogItem">Достопримечательность</string>
    <string name="excursionsMenuItem">Экскурсии</string>
    <string name="exampleMenuItem">API</string>
    <string name="excursionItem">Экскурсия</string>
    <string name="routesMenuItem">Маршруты</string>
    <string name="routeItem">Маршрут</string>
    <string name="profileMenuItem">Профиль</string>
    <string name="guidesMenuItem">Гиды</string>
    <string name="guideItem">Гид</string>
    <string name="electedMenuItem">Избранное</string>
    <string name="visitedMenuItem">Посещено</string>
    <string name="eMail">EMail</string>
    <string name="logIn">Войти</string>
    <string name="logOut">Выйти</string>
    <string name="signUp">Зарегистрироваться</string>
    <string name="authorization">Авторизация</string>
    <string name="registration">Регистрация</string>
    <string name="personalAccount">Личный кабинет</string>
    <string name="lastName">Фамилия</string>
    <string name="firstName">Имя</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="retryPassword">Подтвердите пароль</string>
    <string name="btnGo">Пойти</string>
    <string name="btnSchedule">Расписание</string>
    <string name="btnInfo">Подробнее</string>
    <string name="category">Категория</string>
    <string name="filter">Фильтр</string>
    <string name="btnClear">Очистить</string>
    <string name="btnSubmit">Применить</string>
    <string name="search">Поиск</string>
    <string name="eMailStringError">Некорректный адрес электронной почты</string>
    <string name="signUpDataIsNull">Заполните все необходимые данные</string>
    <string name="retryPasswordError">Пароли не совпадают</string>
    <string name="list_of_Users_text">Список пользователей</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_map">MapActivity</string>
</resources>