<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2D3142"
    tools:context=".fragments.SignUpFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#2D3142"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="25dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:text="@string/registration"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lastName"
                android:textColorHint="#D8D8D8"
                app:boxStrokeColor="#ECECEC"
                app:endIconMode="clear_text"
                app:endIconTint="#F8F8F8"
                app:helperTextTextColor="#A1A1A1"
                app:hintTextColor="#9A9A9A"
                app:placeholderTextColor="#A3A3A3"
                app:prefixTextColor="#F4F2F2"
                app:startIconDrawable="@drawable/profile_24"
                app:startIconTint="#FFFFFF"
                app:suffixTextColor="#FFFFFF">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tbLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/firstName"
                android:textColorHint="#D8D8D8"
                app:boxStrokeColor="#ECECEC"
                app:endIconMode="clear_text"
                app:endIconTint="#F8F8F8"
                app:helperTextTextColor="#A1A1A1"
                app:hintTextColor="#9A9A9A"
                app:placeholderTextColor="#A3A3A3"
                app:prefixTextColor="#F4F2F2"
                app:startIconDrawable="@drawable/profile_24"
                app:startIconTint="#FFFFFF"
                app:suffixTextColor="#FFFFFF">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tbFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login"
                android:textColorHint="#D8D8D8"
                app:boxStrokeColor="#ECECEC"
                app:endIconMode="clear_text"
                app:endIconTint="#F8F8F8"
                app:helperTextTextColor="#A1A1A1"
                app:hintTextColor="#9A9A9A"
                app:placeholderTextColor="#A3A3A3"
                app:prefixTextColor="#F4F2F2"
                app:startIconDrawable="@drawable/profile_24"
                app:startIconTint="#FFFFFF"
                app:suffixTextColor="#FFFFFF">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tbLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email"
                android:textColorHint="#D8D8D8"
                app:boxStrokeColor="#ECECEC"

                app:endIconMode="clear_text"
                app:endIconTint="#F8F8F8"
                app:helperTextTextColor="#A1A1A1"
                app:hintTextColor="#9A9A9A"
                app:placeholderTextColor="#A3A3A3"
                app:prefixTextColor="#F4F2F2"
                app:startIconDrawable="@drawable/email_24"
                app:startIconTint="#FFFFFF"
                app:suffixTextColor="#FFFFFF">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tbEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColorHint="#D8D8D8"
                app:boxStrokeColor="#ECECEC"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:counterTextColor="@color/white"
                app:endIconMode="password_toggle"
                app:endIconTint="#F8F8F8"
                app:helperTextTextColor="#A1A1A1"
                app:hintTextColor="#9A9A9A"
                app:passwordToggleTint="#FFFFFF"
                app:placeholderTextColor="#A3A3A3"
                app:prefixTextColor="#F4F2F2"
                app:startIconDrawable="@drawable/lock_24"
                app:startIconTint="#FFFFFF"
                app:suffixTextColor="#FFFFFF">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tbPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLength="20" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/retryPassword"
                android:textColorHint="#D8D8D8"
                app:boxStrokeColor="#ECECEC"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:counterTextColor="@color/white"
                app:endIconMode="password_toggle"
                app:endIconTint="#F8F8F8"
                app:helperTextTextColor="#A1A1A1"
                app:hintTextColor="#9A9A9A"
                app:passwordToggleTint="#FFFFFF"
                app:placeholderTextColor="#A3A3A3"
                app:prefixTextColor="#F4F2F2"
                app:startIconDrawable="@drawable/lock_24"
                app:startIconTint="#FFFFFF"
                app:suffixTextColor="#FFFFFF">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tbRetryPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLength="20" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/signUp"
                style="@style/ButtonReg"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>